@@ -1,3 +1,6 @@
+2009-12-13 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* bug #5342(f): fixed uninitialized array
+
 2009-12-01 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Release 2.6.5
 	
